# shp-matching-algorithm

./: .gitignore  IMPLEMENTATION_PLAN.md  README  README.md  matching algo.rtf  my_changes.patch  results_bm25_cosine_hybrid_njila_full_corpus_dashboard.html
.claude/: settings.local.json
backend/: .dockerignore  .env.example  .gcloudignore  Dockerfile  build-and-deploy.sh  requirements.txt  run_local.py
backend/app/: config.py  database.py  main.py  match_timing_log.py  matching_config_store.py  matching_context.py  matching_runtime.py  routes.py  schemas.py
backend/configs/: template.env.yaml
backend/resources/: comparison_dashboard_shell.html
backend/scripts/: benchmark_full_match_pipeline.py  benchmark_job_retrieval_latency.py  compare_tc1_baseline.py  diagnose_location_filter_counts.py  enrich_ranked_jobs_to_new_collection.py  ensure_jobs_collection_indexes.py  explain_jobs_retrieval_query.py  update_is_active_from_closing_date.py
backend/tests/: algo_comparison.csv  compare_algos.py  full_test_results.json  rebuild_skill_to_row.py  results_additive.json  (+13 more)
data/: check_njila_mongo_connection.py  demand.jsonl  njila_gemini_raw_vs_whitened_dashboard.html  njila_match_input.jsonl  njila_n2v_vs_gemini_whitened_dashboard.html  output.json  output_schema_for_recommender.json  prep_njila_for_matching.py  supply.jsonl
frontend/: .env.example  .env.production  .gcloudignore  Dockerfile  package-lock.json
iac/: pyproject.toml
iac/backend/: Pulumi.yaml  __main__.py  api-gateway-cfg.yaml  deploy_backend.py  env_vars.py
scripts/: debug_matching_steps.py
(+73 files in other folders)
