[project]
name = "iac"
version = "0.1.0"
description = ""
authors = [
    {name = "Tabiya",email = "hi@tabiya.org"}
]
requires-python = ">=3.11"
dependencies = [
    "pulumi (>=3.232.0,<4.0.0)",
    "pulumi-gcp (>=9.20.0,<10.0.0)",
    "pulumi-docker (>=5.0.0,<6.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
